# stalix

./: README.md  pyproject.toml  requirements.txt
demo/: __main__.py
stalix/: StaLiX.py  __init__.py
